New UID change, Gaggle removal